<resources>
    <string name="app_name">Smart Wish List</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_notification">Price alerts</string>
    <string name="title_activity_product_info">Product info</string>
    <string name="title_activity_web_site">www.smartwishlist.net</string>
    <string name="title_activity_setup">Setup</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>

    <string name="qr_code_button">Scan QR code</string>
    <string name="invalid_client_id">Invalid client ID, please retry.</string>
    <string name="gcm_registration_failed">Could not register device to receive notifications, please restart the app.</string>
    <string name="price_alert">Price alert</string>
    <string name="buy">Buy</string>
    <plurals name="price_alerts">
        <item quantity="one">%d price alert</item>
        <item quantity="other">%d price alerts</item>
    </plurals>
    <string name="price_alerts_title">Price alerts:</string>
    <plurals name="more_alerts">
        <item quantity="other">+%d more</item>
    </plurals>
    <string name="no_internet_connection">Warning! No Internet connection detected!</string>
    <string name="confirmation">Are you sure?</string>
    <string name="error_during_reset">Error during client reset. Please retry.</string>
    <string name="qr_code_found">QR code found. Now this app will receive notifications for your Wish List.</string>
    <string name="qr_code_not_found">QR code not found. Please retry.</string>
    <string name="screenshot_description">Screenshot</string>
    <string name="help_text">To get the QR code, you should open www.smartwishlist.net on your desktop/laptop, then go to \'Notifications\' (top menu bar). If you did not yet activate Android App, you should click on the plus button in \'Android App\' panel, and finally you should click on \'Show QR Code\' link.</string>
    <string name="my_wish_list_label">My Wish Lists</string>
    <string name="my_wish_list_button">Open</string>
    <string name="reset_label">Link this app to a new Wish List</string>
    <string name="reset_button">Reset</string>
    <string name="current_price_label">Current price:</string>
    <string name="target_price_label">Target price:</string>
    <string name="available_label">Available</string>
    <string name="sold_by_amazon_label">Sold by Amazon</string>
    <string name="added_label">Added:</string>
    <string name="scan_qr_code_help">You can link this app to an existing Wish List.</string>
    <string name="help_description">Help</string>
    <string name="open_site_help">You can create a new Wish List from the web site.</string>
    <string name="open_site_button">Open web site</string>
    <string name="product_image_description">Product image</string>
    <string name="product_info_description">Product info</string>
    <string name="pref_notification_enabled">Notifications</string>
    <string name="pref_notification_enabled_summary">Receive price drop notifications</string>
    <string name="refresh_button">Refresh</string>
    <string name="action_send_error">Cannot find a link to an Amazon product.</string>
    <string name="search_label">Product search</string>
    <string name="search_button">Search</string>
    <string name="price_drop_label">Price drop:</string>
    <string name="price_increase_label">Price increase:</string>
    <string name="store_label">Store:</string>
    <string name="qr_code_title">QR code reader</string>
    <string name="qr_code_message">This application requires a QR code reader. Would you like to install it?</string>
    <string name="qr_code_install_error">Cannot install QR code reader!</string>
    <string name="qr_code_app_error">Cannot start QR code reader!</string>
    <string name="reset_progress_title">Reset in progress</string>
    <string name="reset_progress_dialog">Please wait…</string>
</resources>
