<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="net.smartwishlist.smartwishlistapp.ProductInfoActivity">

    <TextView
        android:id="@+id/product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawablePadding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/product_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/product_price"
            android:textSize="16sp"
            android:text="@string/current_price_label" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#a94442"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/product_target_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/product_target_price"
            android:text="@string/target_price_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/product_target_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/product_availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/available_label"
        android:textSize="16sp"
        android:padding="4dp" />

    <CheckBox
        android:id="@+id/product_sold_by_amazon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/sold_by_amazon_label"
        android:textSize="16sp"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <TextView
            android:id="@+id/product_added_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/product_added_date"
            android:textSize="16sp"
            android:text="@string/added_label" />

        <TextView
            android:id="@+id/product_added_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:onClick="openBuyLink" />

</LinearLayout>
